WP-8633 Fixing the alignment of the responsive menu bars for the Insights section

--- a/css/style.css
+++ b/css/style.css
@@ -8662,6 +8662,17 @@ input.signup-submit:hover {
   }
 }
 
+@media (max-width: 37.4375em) {
+  .page-insights #md-megamenu-1.awemenu-mobile-standard.md-mobile-style2 .awemenu-bars {
+    right: -15px;
+  }
+}
+@media (min-width: 37.5em) and (max-width: 74.9375em) {
+  .page-insights #md-megamenu-1.awemenu-mobile-standard.md-mobile-style2 .awemenu-bars {
+    margin-right: -15px;
+  }
+}
+
 @media (min-width: 14.375em) and (max-width: 74.9375em) {
   .md-megamenu-executive-edu-main-menu.awemenu-mobile .awemenu-container,
   .md-megamenu-seed-main-menu.awemenu-mobile .awemenu-container {
